--- a/hand_gesture_recognition.ipynb
+++ b/hand_gesture_recognition.ipynb
@@ -68,17 +68,16 @@
    ],
    "source": [
     "import os\n",
-    "import numpy as np # linear algebra\n",
-    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
-    "import matplotlib.pyplot as plt #for different plot\n",
-    "from sklearn.preprocessing import OneHotEncoder #for data preprocessing\n",
-    "from sklearn.preprocessing import StandardScaler #for scaling data\n",
+    "import numpy as np\n",
+    "import pandas as pd \n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "#for data preprocessing using keras\n",
     "from keras.preprocessing.image import array_to_img, img_to_array, load_img\n",
     "import tensorflow as tf\n",
-    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
-    "# keras classes required for building deep CNN model\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n"
     "from keras.models import Sequential, save_model, load_model\n",
     "from keras.layers import Dense, Conv2D, MaxPooling2D, Flatten, Activation, Dropout \n",
     "from keras.utils import plot_model\n",
@@ -105,7 +104,6 @@
    },
    "source": [
     "<a id=\"Section 1:read dataset including folders, subfolders, and images :\"></a>\n",
-    "# Read Images and Labels in the Dataset  \n",
     "\n"
    ]
   },
